# stilus-GUI

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  LICENSE  README.md  README_en.md  cross-musl.txt  meson.build  stilus.pc.in
.github/workflows/: ci.yml
docs/: gui.md  gui_en.md
examples/: anim_demo.cpp  backend_test.cpp  cjk_demo.cpp  clipboard_demo.cpp  emoji_demo.cpp  hello.cpp  input_probe.cpp  paint_demo.cpp  path_demo.cpp  popup_demo.cpp  transform_demo.cpp  widget_demo.cpp  xkb_test.cpp
include/stilus/: canvas.hpp  event.hpp  font.hpp  geom.hpp  gui.hpp  path.hpp  popup.hpp  theme.hpp  widget.hpp  widgets.hpp  window.hpp
src/: damage.hpp  widget.cpp  widgets.cpp  window.cpp
src/platform/: platform.hpp
src/platform/wayland/: wl_factory.cpp  wl_keymap.hpp  wl_popup.cpp  wl_popup.hpp  wl_proto.cpp  wl_proto.hpp  wl_window.cpp  wl_window.hpp  xkb_parse.cpp  xkb_parse.hpp
src/platform/x11/: xcb_factory.cpp  xcb_window.cpp  xcb_window.hpp
src/render/: path.cpp  path_raster.cpp  path_raster.hpp  soft_canvas.cpp  soft_canvas.hpp
src/text/: font.cpp  font_impl.hpp
test/: ppm.hpp  test_font_robustness.cpp  test_framework.hpp  test_golden.cpp  test_unit.cpp  test_x11_integration.cpp
test/golden/: affine_rotated_rect.ppm  fill_circle.ppm  fill_rect.ppm  fill_rounded_rect.ppm  nested_clip_rects.ppm  path_clip_circle.ppm  stroke_rect.ppm
test/integration/: x11_display.cpp  x11_gpu.cpp  x11_smoke.cpp  x11_thermal.cpp
tools/: zig-musl-cc  zig-musl-cxx
